pkg/synthesis/tests_expected_output/k8s_resources/ExampleGroup4/pods.yaml
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__no-group-vms-group: "true"
        tag__bar: "true"
    name: New-VM-1
    namespace: default
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__nested-expr-group: "true"
        tag__backend: "true"
    name: New-VM-2
    namespace: default
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__no-group-vms-group: "true"
        tag__foo: "true"
    name: New-VM-3
    namespace: default
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__nested-expr-group: "true"
        tag__bar: "true"
        tag__foo: "true"
    name: New-VM-4
    namespace: default
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__research-test-expr-2: "true"
    name: NewVirtualMachine
    namespace: default
spec:
    containers: null
status: {}
